@@ -142,7 +142,7 @@
           <kind>tk_long</kind>
         </type>
         <value>
-          <long>2</long>
+          <long>56</long>
         </value>
       </value>
     </configProperty>
