@@ -1,3 +1,12 @@
+Wed Apr 14 12:13:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.h:
+        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
+          Resolved compile issue. Also extended test.
+
+        * connectors/dds4ccm/tests/SetConnectorAttributes/descriptors/Plan.cdp:
+          Reset domain_id.
+
 Wed Apr 14 11:59:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * connectors/ami4ccm/tests/Exceptions/Base/ExceptionT.mpc
